# Vyn

./: README.md  pyproject.toml  requirements.txt  vyn.toml
examples/: _studio_build.vyn  ai_train.vyn  db_demo.vyn  ffi.vyn  gui_app.vyn  hot_swap.vyn  html_page.vyn  match_demo.vyn  ml_bindings.vyn  ml_cv_pandas.vyn  package_demo.vyn  profile.vyn  web_server.vyn
stdlib/std/: ai.vyn  array.vyn  crypto.vyn  css.vyn  cv.vyn  db.vyn  fs.vyn  gui.vyn  hash.vyn  hashmap.vyn  html.vyn  http.vyn  io.vyn  json.vyn  log.vyn  math.vyn  mem.vyn  net.vyn  numpy.vyn  option.vyn  pandas.vyn  plot.vyn  rand.vyn  result.vyn  server.vyn  sklearn.vyn  str.vyn  sync.vyn  sys.vyn  tensorflow.vyn  thread.vyn  time.vyn  torch.vyn  vec.vyn
tests/: test_vyn.py
vpm/: __init__.py  __main__.py
vyn/: __init__.py  ai_runtime.py  borrow_checker.py  cli.py  compiler.py  diagnostics.py  gguf_assistant.py  gui_runtime.py  hot_reload.py  interpreter.py  ml_runtime.py  module_resolver.py  ownership.py  prelude.py  stdlib_runtime.py  typesystem.py
vyn/ast/: __init__.py  nodes.py
vyn/codegen/: __init__.py  llvm_gen.py
vyn/lexer/: __init__.py  lexer.py
vyn/parser/: __init__.py  parser.py
vyn/runtime/: CMakeLists.txt  vyn_async.cpp  vyn_async.hpp  vyn_ffi.cpp  vyn_ffi.hpp  vyn_rt.c  vyn_rt.h
vyn/semantic/: __init__.py  analyzer.py
vynstudio/: __main__.py  completion_context.py  completion_popup.py  completions.py  debugger_panel.py  editor.py  file_explorer.py  find_replace.py  highlighter.py  hover_tooltip.py  language_server.py  main.py  terminal_panel.py  theme.py
